--- a/ecommerce_backend/.env
+++ b/ecommerce_backend/.env
@@ -1,7 +1,7 @@
-TRAELOYA_API_KEY="MbUP6JzTNB3kC5rjwFS2neuahLE7yKvZs8HXtmqf"
-UDER_API_KEY="NDM6HWuxtyQ9saYqnZgbJBVrS8A7KpeXRjGv2m5c"
-TRAELOYA_API_URL="https://recruitment.weflapp.com/tarifier/traelo_ya"
-UDER_API_URL="https://recruitment.weflapp.com/tarifier/uder"
-CART_API_URL="https://dummyjson.com"
-LOCAL_FRONTEND_URL="http://ec2-54-197-36-50.compute-1.amazonaws.com:3000"
 PORT=8000
+DATABASE_URL=postgres://benjarsanchez:Benja_2102@localhost:5432/url_shortener
+DB_NAME=url_shortener
+DB_USER=postgres
+DB_PASSWORD=Benja_2102
+DB_HOST=localhost
+LOCAL_FRONTEND_URL=http://ec2-13-218-26-90.compute-1.amazonaws.com:3000
