--- a/ecommerce_backend/docker-compose.yml
+++ b/ecommerce_backend/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   app:
     build: .
@@ -9,6 +10,35 @@ services:
       - /usr/src/app/node_modules
     environment:
       - NODE_ENV=development
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
     env_file:
-    - .env
+      - .env
+    depends_on:
+      - db
+    links:
+      - db
     command: npm start
+
+  db:
+    image: postgres:13-alpine
+    restart: always
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
