--- a/ecommerce_backend/package.json
+++ b/ecommerce_backend/package.json
@@ -12,14 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "https": "^1.0.0",
-    "node-fetch": "^3.3.2"
+    "nanoid": "^5.1.5",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.14.1",
+    "sequelize": "^6.37.6"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.2"
   },
   "type": "module"
 }
